stretch prevention new attempt

--- a/css/flickity.css
+++ b/css/flickity.css
@@ -168,5 +168,4 @@ body { font-family: sans-serif; }
 
 .main-flick.is-fullscreen .carousel-cell-image {
   max-width: 100%;
-  max-height: 100%;
 }
